prevent orgnav tab text shifting re: #16

--- a/github-selected-tab-color.user.css
+++ b/github-selected-tab-color.user.css
@@ -42,9 +42,12 @@
   body .sidebar-module .disable > a {
     border-left-color: var(--base-color) !important;
   }
-  /* reset shifting tabs text down issue #16 */
+  /* reset shifting selected tabs text down issue #16 */
   body .reponav .reponav-item.selected {
     padding-top: 7px !important;
+  }
+  body .orgnav .pagehead-tabs-item.selected {
+    padding-top: 8px !important;
   }
 }
 @-moz-document domain("github.community") {
